--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,9 @@ input, textarea, select {
   margin-top: .2rem;
   margin-bottom: .5rem;
 }
+
+.form-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 2em;
+}
